--- a/src/accounts/templates/accounts/login.html
+++ b/src/accounts/templates/accounts/login.html
@@ -11,7 +11,7 @@
         <h2 class="mb-4">Iniciar Sesión</h2>
         <form method="POST">
             {% csrf_token %}
-            {{ form.as_p }} <!-- Este renderiza el formulario de Django -->
+            {{ form.as_p }} 
             <button type="submit" class="btn btn-primary">Iniciar Sesión</button>
         </form>
         <p class="mt-3">
