--- a/src/core/templates/core/blog_detail.html
+++ b/src/core/templates/core/blog_detail.html
@@ -1,23 +1,19 @@
 {% extends 'base.html' %}
 
-{% block title %}{{ object.title }}{% endblock %}
-
 {% block content %}
-<div class="container mt-4">
-    <article>
-        <h1>{{ object.title }}</h1>
-        <h4 class="text-muted">{{ object.subtitle }}</h4>
-        {% if object.image %}
-            <img src="{{ object.image.url }}" class="img-fluid my-3" alt="{{ object.title }}">
-        {% endif %}
-        <p class="mt-4">{{ object.content }}</p>
-        
-        {% if object.author == user %}
-            <div class="mt-3">
-                <a href="{% url 'blog-update' object.pk %}" class="btn btn-primary">Editar</a>
-                <a href="{% url 'blog-delete' object.pk %}" class="btn btn-danger">Eliminar</a>
-            </div>
-        {% endif %}
-    </article>
-</div>
+    <h1>{{ blog.title }}</h1>
+    <h2>{{ blog.subtitle }}</h2>
+    <img src="{{ blog.image.url }}" alt="{{ blog.title }}" style="max-width: 100%;">
+    <p><strong>Autor:</strong> {{ blog.author.username }}</p>
+    <p><strong>Categoría:</strong> {{ blog.get_category_display }}</p>
+    <p><strong>Fecha de Estreno:</strong> {{ blog.release_date }}</p>
+    <p><strong>Género:</strong> {{ blog.genre }}</p>
+    <p><strong>Calificación:</strong> {{ blog.rating }}</p>
+    <p>{{ blog.body }}</p>
+    
+    {% if user.is_staff %}
+        <a href="{% url 'blog_update' blog.id %}" class="btn">Editar</a>
+        <a href="{% url 'blog_delete' blog.id %}" class="btn">Eliminar</a>
+    {% endif %}
+    <a href="{% url 'blog_list' %}" class="btn">Volver</a>
 {% endblock %}
